2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Invoice__c/AM_Invoice__c.object-meta.xml
<CustomObject>
    <label>HT Invoice</label>
    <nameField>
        <label>Invoice No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HT Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>