2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Invoice__c/fields/Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Amount_Received__c</fullName>
    <inlineHelpText>Final/Latest amount received date</inlineHelpText>
    <label>Amount Received</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>