2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Invoice__c/fields/Billing_Party__c.field-meta.xml
<CustomField>
    <fullName>Billing_Party__c</fullName>
    <label>Billing Party</label>
    <length>88</length>
    <type>Text</type>
</CustomField>