2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Invoice__c/fields/Credit_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Date__c</fullName>
    <label>Credit Date</label>
    <type>Date</type>
</CustomField>