2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Invoice__c/fields/Credit_Note_No__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_No__c</fullName>
    <label>Credit Note No.</label>
    <length>25</length>
    <type>Text</type>
</CustomField>