2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Invoice__c/fields/gotinvoice__c.field-meta.xml
<CustomField>
    <fullName>gotinvoice__c</fullName>
    <inlineHelpText>Please ignore this field. Its used for Formula calculation</inlineHelpText>
    <label>gotinvoice</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>