2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Invoice__c/fields/invoice_pdf_link__c.field-meta.xml
<CustomField>
    <fullName>invoice_pdf_link__c</fullName>
    <label>invoice pdf link</label>
    <type>Url</type>
</CustomField>