2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Invoice__c/fields/Job_Reference_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Reference_Status__c</fullName>
    <label>Job Reference Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>