2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Invoice__c/fields/Job_Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Job_Sub_Total__c</fullName>
    <label>Job Sub Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>