2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Invoice__c/fields/OB_IB_Job_No__c.field-meta.xml
<CustomField>
    <fullName>OB_IB_Job_No__c</fullName>
    <formula>IF(
NOT(ISBLANK(Opportunity__r.OB_Job_Number__c)), 
Opportunity__r.OB_Job_Number__c,
IF(NOT(ISBLANK(Opportunity__r.IB_Job_number__c)),
Opportunity__r.IB_Job_number__c,
&quot;needs to be assigned&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OB/IB Job No</label>
    <type>Text</type>
</CustomField>