2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Invoice__c/fields/Payment_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Received_Date__c</fullName>
    <label>Receipt Date</label>
    <type>Date</type>
</CustomField>