2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Invoice__c/fields/Recoverable__c.field-meta.xml
<CustomField>
    <fullName>Recoverable__c</fullName>
    <label>Recoverable</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>