2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Invoice__c/recordTypes/AM_Invoice.recordType-meta.xml
<RecordType>
    <fullName>AM_Invoice</fullName>
    <active>true</active>
    <description>AM Invoice</description>
    <label>AM Invoice</label>
</RecordType>