2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Invoice__c/recordTypes/BJ_Invoice.recordType-meta.xml
<RecordType>
    <fullName>BJ_Invoice</fullName>
    <active>true</active>
    <label>BJ Invoice</label>
</RecordType>