2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Invoice__c/recordTypes/FP_Invoice.recordType-meta.xml
<RecordType>
    <fullName>FP_Invoice</fullName>
    <active>true</active>
    <label>FP Invoice</label>
</RecordType>