2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Invoice__c/recordTypes/HHG_Invoice.recordType-meta.xml
<RecordType>
    <fullName>HHG_Invoice</fullName>
    <active>true</active>
    <description>HHG Invoice</description>
    <label>HHG Invoice</label>
</RecordType>