2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Invoice__c/recordTypes/HK_Invoice.recordType-meta.xml
<RecordType>
    <fullName>HK_Invoice</fullName>
    <active>true</active>
    <label>HK Invoice</label>
</RecordType>