2nd training/Community/Community/Community1/force-app/main/default/objects/AM_Invoice__c/recordTypes/SH_Invoice.recordType-meta.xml
<RecordType>
    <fullName>SH_Invoice</fullName>
    <active>true</active>
    <label>SH Invoice</label>
</RecordType>